# Spectral-CT-Decomposition

./: .gitignore  Dataset.py  Makefile  README.md  Spectral_CT_Decomposition.ipynb  UNET.py  main.py  pyproject.toml
doc/: Spectral_CT_Decomposition.aux  Spectral_CT_Decomposition.bbl  Spectral_CT_Decomposition.blg  Spectral_CT_Decomposition.out  Spectral_CT_Decomposition.tex  references.bib
doc/abstract/: abstract.tex
doc/conclusion/: conclusion.tex
doc/discussion/: discussion.tex
doc/evaluation/: evaluation.tex
doc/introduction/: introduction.tex
doc/methodology/: methodology.tex
doc/related_work/: related_work.tex
src/: AttnDataset.py  CNN.py  CosMLP.py  Dataset.py  EDA.py  ImageDataset.py  MLP.py  PINN.py  Trainer.py  fanbeam_fbp_sino.py  tuning.py
